Fix actions btn links align

--- a/app/assets/stylesheets/georgia/modules/_header.scss
+++ b/app/assets/stylesheets/georgia/modules/_header.scss
@@ -41,7 +41,7 @@
 
 .header-pagination { text-align: right; }
 .header-mail a { color: $font-header; }
-.header-actions a { float: right; }
+.header-actions a.btn { float: right; }
 
 .navbar-brand {
   min-width: $width-sidebar;
